--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Unity WebGL Player | PickyLocks</title>
   </head>
   <body style="text-align: center">
-    <canvas id="unity-canvas" style="width: 960px; height: 600px; background: #231F20"></canvas>
+    <canvas id="unity-canvas" style="width: 98vw; height: 98vh; background: #231F20"></canvas>
     <script src="Build/Newer build - free aspect.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
