--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | PickyLocks</title>
   </head>
-  <body style="text-align: center">
+  <body style="margin-top:0;margin-left:0;margin-right:0;">
     <canvas id="unity-canvas" style="width: 98vw; height: 98vh; background: #231F20"></canvas>
     <script src="Build/Newer build - free aspect.loader.js"></script>
     <script>
